Initial backend setup with AppDbContext, migrations, and database update

--- a/csharp/CVBuilder.Server/appsettings.json
+++ b/csharp/CVBuilder.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=cv_builder;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
