--- a/csharp/CVBuilder.Migrations/CVBuilder.Migrations.csproj
+++ b/csharp/CVBuilder.Migrations/CVBuilder.Migrations.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\CVBuilder.Contracts\CVBuilder.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
