feat: implement OAuth 2.0 factory pattern with multi-provider authentication system

--- a/csharp/CVBuilder.Server/appsettings.json
+++ b/csharp/CVBuilder.Server/appsettings.json
@@ -5,5 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "OAuth": {
+    "Google": {
+      "ClientId": "39027963066-pr8djk1rtme46dgh849vngv87mv5316o.apps.googleusercontent.com"
+    },
+    "Auth0": {
+      "ClientId": "IDqKgmlHIwP58gFj0cjr9yHkw63LFVuy",
+      "Domain": "dev-jglzj7o1xy2uqxdv.us.auth0.com"
+    }
+  },
+  "JWT": {
+    "Issuer": "CVBuilder",
+    "Audience": "CVBuilderClient",
+    "ExpiresMinutes": 10080
+  }
 }
