--- a/csharp/CVBuilder.Server/appsettings.Development.json
+++ b/csharp/CVBuilder.Server/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=cv_builder;Username=postgres;Password=postgres"
+  },
+  "Application": {
+    "FrontendUrl": "http://localhost:3000",
+    "BackendUrl": "https://localhost:7276"
   }
 }
