--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.563.0",
     "next": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +19,9 @@
     "@types/node": "^25.0.3",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.2.2"
   }
 }
